--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(driver)
 export(dstrace)
 export(find_chunks)
 export(graph_chunks)
-export(module_energy_LA112.U_DEMO_DISABLED)
+export(module_energy_LA112.U_DEMO)
 export(module_socioeconomics_L100.Population_downscale_ctry_DISABLED)
 import(dplyr)
 importFrom(assertthat,assert_that)
