Simple old-new load and merge debugging routine
Addresses #366

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(module_water_L1233.Elec_water_DISABLED)
 export(module_water_L133.water.demand.livestock_DISABLED)
 export(module_water_L145.water.demand.municipal_DISABLED)
 export(module_water_L210.water.demand.primary_DISABLED)
+export(oldnew_compare)
 export(parse_csv_header)
 export(protect_integer_cols)
 export(repeat_add_columns)
