--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ r_github_packages:
   - jimhester/covr
   - krlmlr/mockr
 after_success:
-  - Rscript -e 'library(covr);codecov(function_exclusions = "atest")'
+  - Rscript -e 'library(covr);codecov(function_exclusions = c("atest", "oldnew_compare"))'
