--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(dstrace)
 export(find_chunks)
 export(gdp_deflator)
 export(graph_chunks)
+export(inputs_of)
 export(left_join_error_no_match)
 export(module_aglu_L204.resbio_input_DISABLED)
 export(module_aglu_L2041.resbio_input_irr_DISABLED)
@@ -46,6 +47,7 @@ export(module_gcam.usa_LB1231.Elec_tech_DISABLED)
 export(module_water_L133.water.demand.livestock_DISABLED)
 export(module_water_L145.water.demand.municipal_DISABLED)
 export(module_water_L2233.electricity_water_DISABLED)
+export(outputs_of)
 export(parse_csv_header)
 export(protect_integer_cols)
 export(repeat_add_columns)
