--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(module_water_L133.water.demand.livestock_DISABLED)
 export(module_water_L145.water.demand.municipal_DISABLED)
 export(module_water_L202.water.resources.unlimited_DISABLED)
 export(module_water_L2233.electricity_water_DISABLED)
+export(module_water_L233.water.demand.livestock_DISABLED)
 export(parse_csv_header)
 export(protect_integer_cols)
 export(repeat_add_columns)
