--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,7 @@ export(module_gcam.usa_LB1231.Elec_tech_DISABLED)
 export(module_water_L133.water.demand.livestock_DISABLED)
 export(module_water_L202.water.resources.unlimited_DISABLED)
 export(module_water_L2233.electricity_water_DISABLED)
-export(module_water_L233.water.demand.livestock_DISABLED)
+export(module_water_L233.water.demand.livestock)
 export(outputs_of)
 export(parse_csv_header)
 export(protect_integer_cols)
