--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(module_emissions_L124.nonco2_unmgd_R_S_T_Y)
 export(module_emissions_L141.hfc_R_S_T_Y_DISABLED)
 export(module_emissions_L211.ag_nonco2_DISABLED)
 export(module_emissions_L2112.ag_nonco2_IRR_MGMT_DISABLED)
+export(module_emissions_L212.unmgd_nonco2_DISABLED)
 export(module_emissions_L241.en_newtech_nonco2_DISABLED)
 export(module_emissions_L2522.ag_MACC_IRR_MGMT_DISABLED)
 export(module_energy_LA1011.en_bal_adj_DISABLED)
