--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ export(module_emissions_L241.en_newtech_nonco2_DISABLED)
 export(module_emissions_L241.fgas_DISABLED)
 export(module_emissions_L2521.MACC_IRR_DISABLED)
 export(module_emissions_L2522.ag_MACC_IRR_MGMT_DISABLED)
-export(module_energy_LA1011.en_bal_adj_DISABLED)
+export(module_energy_LA1011.en_bal_adj)
 export(module_energy_LA102.en_emiss_CDIAC_DISABLED)
 export(module_energy_LA111.rsrc_fos_Prod_DISABLED)
 export(module_energy_LA112.U_DEMO_DISABLED)
