--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,9 @@ export(module_aglu_L2072.ag_water_irr_mgmt_DISABLED)
 export(module_aglu_L221.land_input_1_DISABLED)
 export(module_aglu_L243.bio_trade_input_DISABLED)
 export(module_aglu_LB151.ag_MIRCA_ctry_C_GLU_irr)
+export(module_emissions_L101.nonghg_en_USA_S_T_Y)
 export(module_emissions_L111.nonghg_en_R_S_T_Y_DISABLED)
+export(module_emissions_L112.ghg_en_R_S_T_Y)
 export(module_emissions_L1221.ghg_agr_R_S_T_Y_IRR_DISABLED)
 export(module_emissions_L124.nonco2_unmgd_R_S_T_Y)
 export(module_emissions_L141.hfc_R_S_T_Y_DISABLED)
