--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ r_github_packages:
 
 script:
   - R CMD build .
-  - R CMD check *.tar.gz
+  - travis_wait R CMD check *.tar.gz
 
 #after_success:
 #  - travis_wait 30 Rscript coverage.R
