R CMD build is timing out

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ r_github_packages:
   - krlmlr/mockr
 
 script:
-  - R CMD build .
+  - travis_wait R CMD build .
   - travis_wait R CMD check *.tar.gz
 
 #after_success:
