--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(module_energy_LA111.rsrc_fos_Prod_DISABLED)
 export(module_energy_LA112.U_DEMO_DISABLED)
 export(module_energy_LA144.building_det_en_DISABLED)
 export(module_energy_LA144.building_det_flsp_DISABLED)
+export(module_energy_LB1322.Fert)
 export(module_gcam.usa_LA114.Wind_DISABLED)
 export(module_gcam.usa_LA161.Cstorage_DISABLED)
 export(module_gcam.usa_LB1231.Elec_tech_DISABLED)
