--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ cache: packages
 env:
   - GCAMDATA_USE_JAVA=TRUE
 
-r_github_packages:
+#r_github_packages:
 #  - jimhester/covr
-  - krlmlr/mockr
+#  - krlmlr/mockr
 
 #script:
 #  - travis_wait R CMD build .
