--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,8 @@ Imports:
     data.table (>= 1.10.4)
 Suggests:
     igraph (>= 1.0.1),
-    testthat (>= 1.0.2),
-    mockr (>= 0.0.2)
+    mockr (>= 0.1),
+    testthat (>= 1.0.2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
