Shouldn't need travis_wait on R CMD build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
 #  - krlmlr/mockr
 
 script:
-  - travis_wait R CMD build .
+  - R CMD build .
   - travis_wait 30 R CMD check *.tar.gz
 
 #after_success:
