--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ export(module_energy_LA1011.en_bal_adj_DISABLED)
 export(module_energy_LA111.rsrc_fos_Prod_DISABLED)
 export(module_energy_LA112.U_DEMO_DISABLED)
 export(module_gcam.usa_LA114.Wind_DISABLED)
-ıexport(module_gcam.usa_LA161.Cstorage_DISABLED)
+export(module_gcam.usa_LA161.Cstorage_DISABLED)
 export(module_gcam.usa_LB1231.Elec_tech_DISABLED)
 export(module_water_L133.water.demand.livestock_DISABLED)
 export(module_water_L2233.electricity_water_DISABLED)
