--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(module_water_L133.water.demand.livestock_DISABLED)
 export(module_water_L2233.electricity_water_DISABLED)
 export(module_water_L232.water.demand.manufacturing_DISABLED)
 export(module_water_L233.water.demand.livestock_DISABLED)
+export(module_water_L245.water.demand.municipal_DISABLED)
 export(outputs_of)
 export(parse_csv_header)
 export(protect_integer_cols)
