--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(module_emissions_L2112.ag_nonco2_IRR_MGMT_DISABLED)
 export(module_emissions_L212.unmgd_nonco2_DISABLED)
 export(module_emissions_L241.en_newtech_nonco2_DISABLED)
 export(module_emissions_L2522.ag_MACC_IRR_MGMT_DISABLED)
+export(module_energy_L261.Cstorage_DISABLED)
+export(module_energy_LA1011.en_bal_adj)
 export(module_energy_LA111.rsrc_fos_Prod_DISABLED)
 export(module_energy_LA112.U_DEMO_DISABLED)
 export(module_energy_LA144.building_det_en_DISABLED)
